06_rect/grade.txt
Grading at Tue Sep 10 02:43:31 UTC 2019
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:41:10: error: unused variable ‘intersectionRect’ [-Werror=unused-variable]
   rect_t intersectionRect = {0, 0, 0, 0};
          ^
rectangle.c: At top level:
rectangle.c:66:21: error: unknown type name ‘rectangle’
 void printRectangle(rectangle r) {
                     ^
rectangle.c: In function ‘main’:
rectangle.c:86:3: error: implicit declaration of function ‘printRectangle’ [-Werror=implicit-function-declaration]
   printRectangle(r1);
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
